Add Autogen agents and tools for string reversal and cat facts
- Created a Jupyter notebook for Autogen agents demonstrating a string reversal tool.
- Implemented a Python script for a custom function tool that reverses strings using the AssistantAgent.
- Developed a Python script for an inbuilt tool that fetches random cat facts using an HTTP API.
- Added a new PNG file for visual notes on Autogen.
- Updated requirements.txt to include HTTP tool dependencies.

--- a/1. Introduction/1. First Autogen Agent.ipynb
+++ b/1. Introduction/1. First Autogen Agent.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "688ca4fa",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "93e8ce47",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "7237adda",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "68fd927d",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "647be0d9",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "messages=[TextMessage(id='714f62c3-d04b-4083-ba19-f7be07265189', source='user', models_usage=None, metadata={}, created_at=datetime.datetime(2025, 7, 5, 3, 25, 38, 211549, tzinfo=datetime.timezone.utc), content='Tell me something about you?', type='TextMessage'), TextMessage(id='c246edfa-aa4b-42fa-9b64-9ae6ab725224', source='my_assistant', models_usage=RequestUsage(prompt_tokens=42, completion_tokens=75), metadata={}, created_at=datetime.datetime(2025, 7, 5, 3, 25, 40, 380327, tzinfo=datetime.timezone.utc), content='I am an AI language model developed by OpenAI, designed to assist with a wide range of queries by providing information, answering questions, and helping with problem-solving. My training includes data up to October 2023, and I can perform tasks like summarizing text, providing explanations, and generating human-like text responses. Please let me know how I can assist you today!', type='TextMessage')] stop_reason=None\n"
+      "messages=[TextMessage(id='5b9f5e24-535d-4dbd-8371-1e00b7277bea', source='user', models_usage=None, metadata={}, created_at=datetime.datetime(2025, 9, 2, 7, 52, 21, 784759, tzinfo=datetime.timezone.utc), content='Tell me something about you?', type='TextMessage'), TextMessage(id='49a1d6ba-366e-422c-b9df-216c784f9e1d', source='my_assistant', models_usage=RequestUsage(prompt_tokens=194, completion_tokens=58), metadata={}, created_at=datetime.datetime(2025, 9, 2, 7, 52, 24, 327305, tzinfo=datetime.timezone.utc), content=\"I am an AI assistant created to provide information, answer questions, and assist with various tasks using my tools and knowledge. My goal is to be helpful across a variety of topics and inquiries. If there's anything specific you want to know or tasks you need help with, feel free to ask!\", type='TextMessage')] stop_reason=None\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "484d9d3f",
    "metadata": {},
    "outputs": [],
@@ -127,17 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b213a370",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TaskResult(messages=[TextMessage(id='76d1e1aa-b951-46d2-9c60-ff1012276b25', source='user', models_usage=None, metadata={}, created_at=datetime.datetime(2025, 7, 5, 3, 27, 40, 688838, tzinfo=datetime.timezone.utc), content='What was my last question?', type='TextMessage'), TextMessage(id='5ea5301b-0980-47be-a864-a6ca7345aa70', source='my_assistant', models_usage=RequestUsage(prompt_tokens=132, completion_tokens=12), metadata={}, created_at=datetime.datetime(2025, 7, 5, 3, 27, 42, 61792, tzinfo=datetime.timezone.utc), content='Your last question was: \"Tell me something about you?\"', type='TextMessage')], stop_reason=None)"
+       "TaskResult(messages=[TextMessage(id='34c31f6b-e7db-4bde-b3df-b8f04951a0d3', source='user', models_usage=None, metadata={}, created_at=datetime.datetime(2025, 9, 2, 7, 52, 38, 210831, tzinfo=datetime.timezone.utc), content='What was my last question?', type='TextMessage'), TextMessage(id='79381c6a-9c1e-4814-b540-d95f6729f656', source='my_assistant', models_usage=RequestUsage(prompt_tokens=267, completion_tokens=28), metadata={}, created_at=datetime.datetime(2025, 9, 2, 7, 52, 41, 935713, tzinfo=datetime.timezone.utc), content='Your last question was: \"Tell me something about you?\" If you have any more questions or need further information, feel free to ask!', type='TextMessage')], stop_reason=None)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
